deploy/kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prompt2pbi-web
  namespace: prompt2pbi
spec:
  selector:
    app: prompt2pbi-web
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
